kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wasmerspeed
spec:
  selector:
    app: wasmerspeed
  ports:
    - name: wasmerspeed
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
